# ETL-SQL-DuckDB-Parquet-

./: .env.example  .gitignore  ADVANCED_FEATURES.md  BENCHMARK_FIXES.md  CHANGELOG.md  COMPLETE_SUMMARY.md  DEPLOYMENT_GUIDE.md  FIXES_SUMMARY.md  ISSUES.md  LICENSE  Makefile  PORTFOLIO.md  PROJECT_SUMMARY.md  README.md  STREAMLIT_README.md  app.py  app_advanced.py  extract_zip.py  pyproject.toml  run_etl_new_data.py  setup.cfg  setup_advanced.sh  test_benchmark_fixes.py  test_imports.sh  test_pipeline.py
.github/workflows/: ci.yml
data/: .pipeline_history.db
data/raw/: runs.csv  samples.csv
data/raw/genomics-metadata-etl-duckdb-example-data/: README_DATASET.md
data/raw/genomics-metadata-etl-duckdb-example-data/data/raw_clean/: qc_metrics.tsv
data/raw/genomics-metadata-etl-duckdb-example-data/data/raw_dirty/: qc_metrics.tsv  runs.csv  samples.csv  variant_stats.csv
docs/: SETUP.md  benchmark_results.md  data_dictionary.md  example_output.md  example_queries.md  report.html
sql/: queries.sql  schema.sql
src/: __init__.py  benchmarks.py  cli.py  file_upload.py  history.py  profiling.py  qc_metrics.py  reporting.py  s3_handler.py  scheduler.py  schema_inspector.py
src/etl/: ingest.py  load.py  settings.py  transform.py  validate.py
tests/: test_transform.py  test_validate.py
tests/data/: qc_metrics_test.tsv  runs_test.csv  samples_test.csv
